--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -2,12 +2,12 @@
 {% block content %}
   <section class="section">
     <h1 class="h1">Админ вход</h1>
-    <p class="muted">Пароль берётся из переменной окружения <code>ADMIN_PASSWORD</code>.</p>
+    <p class="muted">Введи пароль администратора (переменная окружения <code>ADMIN_PASSWORD</code>).</p>
   </section>
 
   <form class="form" method="post">
     <label class="label">Пароль</label>
-    <input class="input" type="password" name="password" required>
+    <input class="input" type="password" name="password" placeholder="••••••••" required>
 
     <button class="btn btn-primary" type="submit">Войти</button>
     <a class="btn" href="{{ url_for('index') }}">Назад</a>
