--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,9 @@
         <img class="brand__logo" src="{{ url_for('static', filename='logo.png') }}" alt="Logo">
         <div>
           <div class="brand__title">Статистика Квадратных Метров</div>
-          <div class="brand__subtitle">Карточки (публикация — только админ)</div>
+          <div class="brand__subtitle">
+            Материалы курса • Написать администратору:<a class="link" href="https://t.me/numresearch" target="_blank" rel="noopener">t.me/numresearch</a>
+          </div>
         </div>
       </div>
 
