--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
         <div>
           <div class="brand__title">Статистика Квадратных Метров</div>
           <div class="brand__subtitle">
-            Материалы курса • Написать администратору:<a class="link" href="https://t.me/numresearch" target="_blank" rel="noopener">t.me/numresearch</a>
+            Материалы курса • <a class="link" href="https://numerical-res.onrender.com" target="_blank" rel="noopener">Numerical Research</a>
           </div>
         </div>
       </div>
