--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Статичтика Квадратных Метров</title>
+  <title>Статистика Квадратных Метров</title>
   <link rel="icon" type="image/png" href="{{ url_for('static', filename='logo.png') }}">
   <link rel="apple-touch-icon" href="{{ url_for('static', filename='logo.png') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
@@ -14,8 +14,8 @@
       <div class="brand">
         <img class="brand__logo" src="{{ url_for('static', filename='logo.png') }}" alt="Logo">
         <div>
-          <div class="brand__title">Статичтика Квадратных Метров</div>
-          <div class="brand__subtitle">Материалы курса • <a class="link" href="https://t.me/numresearch" target="_blank" rel="noopener">t.me/numresearch</a></div>
+          <div class="brand__title">Статистика Квадратных Метров</div>
+          <div class="brand__subtitle">Материалы Numerical Research • <a class="link" href="https://numerical-res.onrender.com/" target="_blank" rel="noopener">numerical-res.onrender.com</a></div>
         </div>
       </div>
 
